--- a/style.css
+++ b/style.css
@@ -1,1 +1,808 @@
+body {
+    display: flex;
+}
 
+.applelogo {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 155px;
+    top: 13px;
+    opacity: 0.8;
+}
+
+.Store {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 205px;
+    opacity: 0.8;
+    top: 5px;
+}
+
+.Mac {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 265px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.iPad {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 315px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.iPhone {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 375px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.Watch {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 445px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.Vision {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 518px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.AirPods {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 585px;
+    opacity: 0.8;
+    top: 5px;
+
+}
+
+.TVandHome {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 665px;
+    opacity: 0.8;
+    top: 6px;
+
+}
+
+.Entertainment {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 755px;
+    opacity: 0.8;
+    top: 6px;
+
+}
+
+.Accessories {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 875px;
+    opacity: 0.8;
+    top: 6px;
+
+}
+
+.Support {
+    position: absolute;
+    font-size: 12px;
+    font-family: Helvetica, sans-serif;
+    left: 975px;
+    opacity: 0.8;
+    top: 6px;
+
+}
+
+.dandruff {
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    left: 1055px;
+    top: 13px;
+    opacity: 0.8;     
+}
+
+
+.bag {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    left: 1105px;
+    top: 13px;
+    opacity: 0.8;
+}
+
+.applelogo:hover {
+    opacity: 1;
+}
+
+.Store:hover {
+    opacity: 1;
+}
+
+.Mac:hover {
+    opacity: 1;
+
+}
+
+.iPad:hover {
+    opacity: 1;
+}
+
+.iPhone:hover {
+    opacity: 1;
+}
+
+.Watch:hover {
+    opacity: 1;
+
+}
+
+.Vision:hover {
+    opacity: 1;
+}
+
+.AirPods:hover {
+    opacity: 1;
+
+}
+
+.TVandHome:hover {
+    opacity: 1;
+
+}
+
+.Entertainment:hover {
+    opacity: 1;
+}
+
+.Accessories:hover {
+    opacity: 1;
+
+}
+
+.Support:hover {
+    opacity: 1;
+}
+
+.dandruff:hover {
+    opacity: 1;
+}
+
+
+.bag:hover {
+    opacity: 1;
+}
+
+h1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 19px;
+    top: 50px;
+    left: 155px;
+}
+
+.Upgrade {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    padding: 7px 11px 7px 11px;
+    border-radius: 15px;
+    background-color: rgb(94, 94, 255);
+    top: 50px;
+    left: 1055px;
+}
+
+.Upgrade:hover {
+    background-color: rgb(107, 107, 253);
+}
+
+.Upgrade:focus {
+    background-color: rgb(61, 61, 247);
+}
+
+.background {
+    position: absolute;
+    background-color: rgb(55, 138, 233);
+    padding: 200px 5000px 1350px 5000px;
+    left: 10px;
+    top: 100px;
+}
+
+
+.iCloudlogo {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    left: 500px;
+    top: 150px;
+    z-index: 4;
+
+}
+
+.manface {
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    left: 300px;
+    top: 230px;
+    z-index: 3;
+}
+
+.womanface {
+    position: absolute;
+    width: 250px;
+    height: 250px;
+    left: 750px;
+    top: 230px;
+    z-index: 3;
+}
+
+.photoslogo {
+    position: absolute;
+    width: 190px;
+    height: 190px;
+    left: 190px;
+    top: 185px;
+    z-index: 3;
+}
+
+.noteslogo {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 330px;
+    top: 155px;
+    z-index: 3;
+    opacity: 0.5;
+}
+
+.financelogo {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    left: 220px;
+    top: 365px;
+    z-index: 2;
+}
+
+.calendarlogo {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    opacity: 0.7;
+    left: 130px;
+    top: 335px;
+    z-index: 3;
+}
+
+.fileslogo {
+    position: absolute;
+    width: 190px;
+    height: 190px;
+    left: 950px;
+    top: 185px;
+    z-index: 2;
+}
+
+.messengslogo {
+    position: absolute;
+    width: 150px;
+    height: 150px;
+    left: 948px;
+    top: 355px;
+    z-index: 3;
+}
+
+.rebootlogo {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 900px;
+    top: 155px;
+    z-index: 3;
+    opacity: 0.5;
+}
+
+.protectionlogo {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    opacity: 0.7;
+    left: 1100px;
+    top: 335px;
+    z-index: 4;
+}
+
+h2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 40px;
+    color: white;
+    top: 450px;
+    left: 580px;
+}
+
+h3 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 70px;
+    text-align: center;
+    color: white;
+    top: 480px;
+    left: 300px;
+}
+
+.sectionp1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 25px;
+    text-align: center;
+    color: white;
+    top: 850px;
+    left: 290px;
+}
+
+.Upgradetoday {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 17px;
+    text-decoration: none;
+    color: white;
+    padding: 11px 17px 11px 17px;
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0);
+    top: 750px;
+    left: 600px;
+}
+
+.Upgradetoday:hover {
+    background-color: rgb(43, 43, 43);
+}
+
+.Upgradetoday:focus {
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+.article1 {
+    font-family: Helvetica, sans-serif;
+
+}
+
+.iCloudplus1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 17px;
+    color: rgb(0, 90, 121);
+    top: 1100px;
+    left: 250px;
+}
+
+.nnmonth {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1120px;
+    left: 200px;
+    font-size: 30px;
+}
+
+.fiftyGB {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1170px;
+    left: 230px;
+    font-size: 40px;
+}
+
+.p1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 25px;
+    top: 1250px;
+    left: 150px;
+}
+
+.upgrade1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    padding: 11px 17px 11px 17px;
+    border-radius: 20px;
+    background-color: rgb(41, 41, 253);
+    top: 1360px;
+    left: 230px;
+}
+
+.upgrade1:hover {
+    background-color: rgb(67, 67, 253);
+}
+
+.upgrade1:focus {
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+.iCloudplus2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 17px;
+    color: rgb(0, 90, 121);
+    top: 1100px;
+    left: 650px;
+}
+
+.twonnmonth {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1120px;
+    left: 600px;
+    font-size: 30px;
+}
+
+.twohundredGB {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1170px;
+    left: 620px;
+    font-size: 40px;
+}
+
+.p2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1250px;
+    left: 550px;
+    font-size: 25px;
+    text-align: center;
+}
+
+.upgrade2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    padding: 11px 17px 11px 17px;
+    border-radius: 20px;
+    background-color: rgb(41, 41, 253);
+    top: 1360px;
+    left: 650px;
+}
+
+.upgrade2:hover {
+    background-color: rgb(67, 67, 253);
+}
+
+.upgrade2:focus {
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+.iCloudplus3 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 17px;
+    color: rgb(0, 90, 121);
+    top: 1100px;
+    left: 1050px;
+}
+
+.twoTB {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1170px;
+    left: 1050px;
+    font-size: 40px;
+}
+
+.ninennmonth {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1120px;
+    left: 1000px;
+    font-size: 30px;
+}
+
+.p3 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    top: 1250px;
+    left: 920px;
+    font-size: 23px;
+    text-align: center;
+}
+
+.upgrade3 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+    padding: 11px 17px 11px 17px;
+    border-radius: 20px;
+    background-color: rgb(41, 41, 253);
+    top: 1360px;
+    left: 1050px;
+}
+
+.upgrade3:hover {
+    background-color: rgb(67, 67, 253);
+}
+
+.upgrade3:focus {
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+.sectionp2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 23px;
+    color: white;
+    text-align: center;
+    top: 1450px;
+    left: 250px;
+}
+
+.compareallplans {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 17px;
+    text-decoration: none;
+    color: white;
+    padding: 11px 17px 11px 17px;
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0);
+    top: 1560px;
+    left: 600px;
+}
+
+.compareallplans:hover {
+    background-color: rgb(43, 43, 43);
+}
+
+.compareallplans:focus {
+    border: 5px solid black;
+    border-radius: 20px;
+}
+
+.everything {
+    position: absolute;
+    top: 2000px;
+    left: 100px;
+}
+
+h4 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 70px;
+    text-align: start;
+    top: 1700px;
+    left: 150px;
+    opacity: 0.9;
+}
+
+.iCloudphotos {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 2850px;
+    left: 230px;
+}
+
+span {
+    color: black;
+}
+
+.first {
+    box-shadow: 2px 2px 23px 5px rgb(216, 202, 202);
+}
+
+.firstp1 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 3150px;
+    left: 170px;
+}
+
+.firstp2 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 3330px;
+    left: 170px;
+}
+
+.divphotos {
+    position: absolute;
+    top: 3580px;
+    left: 170px;
+}
+
+.secondp {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 3150px;
+    right: 150px;
+}
+
+.second img {
+    position: absolute;
+    top: 3380px;
+    right: 170px;
+    width: 450px;
+    height: 500px;
+}
+
+.backups {
+    position: absolute;
+    background-color: rgb(230, 221, 221);
+    padding: 15px;
+    border-radius: 15px;
+    top: 3900px;
+    left: 170px;
+}
+ 
+.third p{
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 3900px;
+    right: 150px;
+}
+
+.third img{
+    position: absolute;
+    padding: 15px;
+    top: 4050px;
+    right: 110px;
+}
+
+.iCloudbackup {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 4300px;
+    left: 150px;
+}
+
+h5 {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 70px;
+    text-align: start;
+    top: 4800px;
+    left: 150px;
+    opacity: 0.9;    
+}
+
+.skrinmacbook {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 70px;
+    top: 5180px;
+    left: 120px;
+}
+
+.iCloudcom {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 5950px;
+    left: 230px;
+}
+
+.VisitiCloudcom {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(64, 64, 255);
+    top: 6100px;
+    left: 230px;
+}
+
+.VisitiCloudcom:hover {
+    border-bottom: 2px solid rgb(64, 64, 255);
+}
+
+.notesimg {
+    position: absolute;
+    top: 6300px;
+    left: 150px;
+}
+
+.notesp {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 6280px;
+    left: 250px;
+}
+
+.calendarimg {
+    position: absolute;
+    background-image: linear-gradient(rgb(52, 52, 255),rgb(39, 140, 255),rgb(52, 52, 255) );
+    padding: 35px;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    top: 6500px;
+    left: 120px;
+}
+
+.photos {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 6280px;
+    right: 150px;
+}
+
+.iphonefoto {
+    position: absolute;
+    padding: 15px;
+    top: 6400px;
+    right: 30px;
+}
+
+.Calendar {
+    position: absolute;
+    font-family: Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: start;
+    color: grey;
+    top: 6800px;
+    left: 150px;
+}
